deploy: b4045ff9b9634b5a78f6b822f6dafe0d6850adb7

--- a/_modules/index.html
+++ b/_modules/index.html
@@ -29,8 +29,9 @@
           <div class="body" role="main">
             
   <h1>All modules for which code is available</h1>
-<ul><li><a href="python2verilog/api/cli.html">python2verilog.api.cli</a></li>
-<li><a href="python2verilog/api/decorator.html">python2verilog.api.decorator</a></li>
+<ul><li><a href="python2verilog/api/decorator.html">python2verilog.api.decorator</a></li>
+<li><a href="python2verilog/api/text.html">python2verilog.api.text</a></li>
+<li><a href="python2verilog/api/wrappers.html">python2verilog.api.wrappers</a></li>
 <li><a href="python2verilog/backend/verilog/ast.html">python2verilog.backend.verilog.ast</a></li>
 <li><a href="python2verilog/backend/verilog/codegen.html">python2verilog.backend.verilog.codegen</a></li>
 <li><a href="python2verilog/extern/iverilog.html">python2verilog.extern.iverilog</a></li>
