--- a/_modules/python2verilog/backend/verilog/codegen.html
+++ b/_modules/python2verilog/backend/verilog/codegen.html
@@ -67,6 +67,7 @@
         <span class="k">for</span> <span class="n">item</span> <span class="ow">in</span> <span class="n">root_case</span><span class="o">.</span><span class="n">case_items</span><span class="p">:</span>
             <span class="bp">self</span><span class="o">.</span><span class="n">context</span><span class="o">.</span><span class="n">add_state</span><span class="p">(</span><span class="n">item</span><span class="o">.</span><span class="n">condition</span><span class="o">.</span><span class="n">to_string</span><span class="p">())</span>
 
+        <span class="k">assert</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">context</span><span class="o">.</span><span class="n">ready_state</span><span class="p">,</span> <span class="nb">str</span><span class="p">)</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">context</span><span class="o">.</span><span class="n">add_state_weak</span><span class="p">(</span><span class="n">context</span><span class="o">.</span><span class="n">ready_state</span><span class="p">)</span>
 
         <span class="bp">self</span><span class="o">.</span><span class="n">context</span><span class="o">.</span><span class="n">add_global_var</span><span class="p">(</span>
@@ -215,13 +216,13 @@
         <span class="k">return</span> <span class="nb">str</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">get_module_lines</span><span class="p">())</span></div>
 
 
-<div class="viewcode-block" id="CodeGen.new_testbench">
-<a class="viewcode-back" href="../../../../python2verilog.backend.verilog.html#python2verilog.backend.verilog.codegen.CodeGen.new_testbench">[docs]</a>
-    <span class="k">def</span> <span class="nf">new_testbench</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">test_cases</span><span class="p">:</span> <span class="nb">list</span><span class="p">[</span><span class="nb">tuple</span><span class="p">]):</span>
+<div class="viewcode-block" id="CodeGen.get_testbench">
+<a class="viewcode-back" href="../../../../python2verilog.backend.verilog.html#python2verilog.backend.verilog.codegen.CodeGen.get_testbench">[docs]</a>
+    <span class="k">def</span> <span class="nf">get_testbench</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        Creates testbench with multiple test cases</span>
 
-<span class="sd">        Each element of test_cases represents a single test case</span>
+<span class="sd">        Each element of self.context.test_cases represents a single test case</span>
 <span class="sd">        &quot;&quot;&quot;</span>
         <span class="k">if</span> <span class="nb">len</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">context</span><span class="o">.</span><span class="n">input_vars</span><span class="p">)</span> <span class="o">==</span> <span class="mi">0</span><span class="p">:</span>
             <span class="k">raise</span> <span class="ne">RuntimeError</span><span class="p">(</span><span class="sa">f</span><span class="s2">&quot;Input var names not deduced for </span><span class="si">{</span><span class="bp">self</span><span class="o">.</span><span class="n">context</span><span class="o">.</span><span class="n">name</span><span class="si">}</span><span class="s2">&quot;</span><span class="p">)</span>
@@ -284,7 +285,7 @@
         <span class="p">)</span>
         <span class="n">initial_body</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="n">ver</span><span class="o">.</span><span class="n">Statement</span><span class="p">())</span>
 
-        <span class="k">for</span> <span class="n">i</span><span class="p">,</span> <span class="n">test_case</span> <span class="ow">in</span> <span class="nb">enumerate</span><span class="p">(</span><span class="n">test_cases</span><span class="p">):</span>
+        <span class="k">for</span> <span class="n">i</span><span class="p">,</span> <span class="n">test_case</span> <span class="ow">in</span> <span class="nb">enumerate</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">context</span><span class="o">.</span><span class="n">test_cases</span><span class="p">):</span>
             <span class="c1"># setup for new test case</span>
             <span class="n">initial_body</span><span class="o">.</span><span class="n">append</span><span class="p">(</span>
                 <span class="n">ver</span><span class="o">.</span><span class="n">Statement</span><span class="p">(</span><span class="n">comment</span><span class="o">=</span><span class="sa">f</span><span class="s2">&quot;Test case </span><span class="si">{</span><span class="n">i</span><span class="si">}</span><span class="s2">: </span><span class="si">{</span><span class="nb">str</span><span class="p">(</span><span class="n">test_case</span><span class="p">)</span><span class="si">}</span><span class="s2">&quot;</span><span class="p">)</span>
@@ -334,22 +335,22 @@
         <span class="k">raise</span> <span class="ne">RuntimeError</span><span class="p">(</span><span class="s2">&quot;Needs the context&quot;</span><span class="p">)</span></div>
 
 
-<div class="viewcode-block" id="CodeGen.new_testbench_lines">
-<a class="viewcode-back" href="../../../../python2verilog.backend.verilog.html#python2verilog.backend.verilog.codegen.CodeGen.new_testbench_lines">[docs]</a>
-    <span class="k">def</span> <span class="nf">new_testbench_lines</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">test_cases</span><span class="p">:</span> <span class="nb">list</span><span class="p">[</span><span class="nb">tuple</span><span class="p">]):</span>
+<div class="viewcode-block" id="CodeGen.get_testbench_lines">
+<a class="viewcode-back" href="../../../../python2verilog.backend.verilog.html#python2verilog.backend.verilog.codegen.CodeGen.get_testbench_lines">[docs]</a>
+    <span class="k">def</span> <span class="nf">get_testbench_lines</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        New Testbench as lines</span>
 <span class="sd">        &quot;&quot;&quot;</span>
-        <span class="k">return</span> <span class="bp">self</span><span class="o">.</span><span class="n">new_testbench</span><span class="p">(</span><span class="n">test_cases</span><span class="p">)</span><span class="o">.</span><span class="n">to_lines</span><span class="p">()</span></div>
+        <span class="k">return</span> <span class="bp">self</span><span class="o">.</span><span class="n">get_testbench</span><span class="p">()</span><span class="o">.</span><span class="n">to_lines</span><span class="p">()</span></div>
 
 
-<div class="viewcode-block" id="CodeGen.new_testbench_str">
-<a class="viewcode-back" href="../../../../python2verilog.backend.verilog.html#python2verilog.backend.verilog.codegen.CodeGen.new_testbench_str">[docs]</a>
-    <span class="k">def</span> <span class="nf">new_testbench_str</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">test_cases</span><span class="p">:</span> <span class="nb">list</span><span class="p">[</span><span class="nb">tuple</span><span class="p">]):</span>
+<div class="viewcode-block" id="CodeGen.get_testbench_str">
+<a class="viewcode-back" href="../../../../python2verilog.backend.verilog.html#python2verilog.backend.verilog.codegen.CodeGen.get_testbench_str">[docs]</a>
+    <span class="k">def</span> <span class="nf">get_testbench_str</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        New testbench as str</span>
 <span class="sd">        &quot;&quot;&quot;</span>
-        <span class="k">return</span> <span class="nb">str</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">new_testbench_lines</span><span class="p">(</span><span class="n">test_cases</span><span class="p">))</span></div>
+        <span class="k">return</span> <span class="nb">str</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">get_testbench_lines</span><span class="p">())</span></div>
 </div>
 
 
