--- a/_modules/python2verilog/frontend/generator2ir.html
+++ b/_modules/python2verilog/frontend/generator2ir.html
@@ -54,17 +54,16 @@
     <span class="k">def</span> <span class="fm">__init__</span><span class="p">(</span>
         <span class="bp">self</span><span class="p">,</span>
         <span class="n">context</span><span class="p">:</span> <span class="n">ir</span><span class="o">.</span><span class="n">Context</span><span class="p">,</span>
-        <span class="n">python_func</span><span class="p">:</span> <span class="n">pyast</span><span class="o">.</span><span class="n">FunctionDef</span><span class="p">,</span>
         <span class="n">done_state_name</span><span class="p">:</span> <span class="nb">str</span> <span class="o">=</span> <span class="s2">&quot;_statelmaoready&quot;</span><span class="p">,</span>
     <span class="p">):</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        Initializes the parser, does quick setup work</span>
 <span class="sd">        &quot;&quot;&quot;</span>
-        <span class="n">assert_type</span><span class="p">(</span><span class="n">python_func</span><span class="p">,</span> <span class="n">pyast</span><span class="o">.</span><span class="n">FunctionDef</span><span class="p">)</span>
+        <span class="n">context</span><span class="o">.</span><span class="n">validate</span><span class="p">()</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">_context</span> <span class="o">=</span> <span class="n">assert_type</span><span class="p">(</span><span class="n">context</span><span class="p">,</span> <span class="n">ir</span><span class="o">.</span><span class="n">Context</span><span class="p">)</span>
 
         <span class="bp">self</span><span class="o">.</span><span class="n">_root</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">__parse_statements</span><span class="p">(</span>
-            <span class="n">stmts</span><span class="o">=</span><span class="nb">list</span><span class="p">(</span><span class="n">python_func</span><span class="o">.</span><span class="n">body</span><span class="p">),</span>
+            <span class="n">stmts</span><span class="o">=</span><span class="nb">list</span><span class="p">(</span><span class="n">context</span><span class="o">.</span><span class="n">py_ast</span><span class="o">.</span><span class="n">body</span><span class="p">),</span>
             <span class="n">prefix</span><span class="o">=</span><span class="s2">&quot;_state&quot;</span><span class="p">,</span>
             <span class="n">nextt</span><span class="o">=</span><span class="n">ir</span><span class="o">.</span><span class="n">DoneNode</span><span class="p">(</span><span class="n">unique_id</span><span class="o">=</span><span class="n">done_state_name</span><span class="p">,</span> <span class="n">name</span><span class="o">=</span><span class="s2">&quot;done&quot;</span><span class="p">),</span>
         <span class="p">)</span>
