deploy: 27d651900a2e4e8e6a151c2604ccdd57c82621de

--- a/genindex.html
+++ b/genindex.html
@@ -339,8 +339,6 @@
 </li>
         <li><a href="python2verilog.api.html#module-python2verilog.api.decorator">python2verilog.api.decorator</a>
 </li>
-        <li><a href="python2verilog.api.html#module-python2verilog.api.text">python2verilog.api.text</a>
-</li>
         <li><a href="python2verilog.api.html#module-python2verilog.api.wrappers">python2verilog.api.wrappers</a>
 </li>
         <li><a href="python2verilog.backend.html#module-python2verilog.backend">python2verilog.backend</a>
@@ -481,13 +479,6 @@
 
       <ul>
         <li><a href="python2verilog.api.html#module-python2verilog.api.decorator">module</a>
-</li>
-      </ul></li>
-      <li>
-    python2verilog.api.text
-
-      <ul>
-        <li><a href="python2verilog.api.html#module-python2verilog.api.text">module</a>
 </li>
       </ul></li>
       <li>
@@ -724,11 +715,11 @@
 </li>
       <li><a href="python2verilog.ir.html#python2verilog.ir.context.Context.testbench_file">testbench_file (Context property)</a>
 </li>
-      <li><a href="python2verilog.api.html#python2verilog.api.text.text_to_context">text_to_context() (in module python2verilog.api.text)</a>
+      <li><a href="python2verilog.api.html#python2verilog.api.wrappers.text_to_context">text_to_context() (in module python2verilog.api.wrappers)</a>
 </li>
-      <li><a href="python2verilog.api.html#python2verilog.api.text.text_to_text">text_to_text() (in module python2verilog.api.text)</a>
+      <li><a href="python2verilog.api.html#python2verilog.api.wrappers.text_to_text">text_to_text() (in module python2verilog.api.wrappers)</a>
 </li>
-      <li><a href="python2verilog.api.html#python2verilog.api.text.text_to_verilog">text_to_verilog() (in module python2verilog.api.text)</a>
+      <li><a href="python2verilog.api.html#python2verilog.api.wrappers.text_to_verilog">text_to_verilog() (in module python2verilog.api.wrappers)</a>
 </li>
       <li><a href="python2verilog.backend.verilog.html#python2verilog.backend.verilog.ast.Always.to_lines">to_lines() (Always method)</a>
 
