--- a/_modules/python2verilog/backend/verilog/ast.html
+++ b/_modules/python2verilog/backend/verilog/ast.html
@@ -34,15 +34,14 @@
 <span class="sd">&quot;&quot;&quot;</span>
 
 <span class="kn">from</span> <span class="nn">__future__</span> <span class="kn">import</span> <span class="n">annotations</span>
+
 <span class="kn">import</span> <span class="nn">itertools</span>
-<span class="kn">import</span> <span class="nn">warnings</span>
 <span class="kn">import</span> <span class="nn">logging</span>
 <span class="kn">from</span> <span class="nn">typing</span> <span class="kn">import</span> <span class="n">Optional</span>
-<span class="kn">import</span> <span class="nn">copy</span>
 
-<span class="kn">from</span> <span class="nn">...utils.string</span> <span class="kn">import</span> <span class="n">Lines</span><span class="p">,</span> <span class="n">Indent</span><span class="p">,</span> <span class="n">ImplementsToLines</span>
-<span class="kn">from</span> <span class="nn">...utils.assertions</span> <span class="kn">import</span> <span class="n">assert_list_type</span><span class="p">,</span> <span class="n">assert_type</span><span class="p">,</span> <span class="n">assert_dict_type</span>
 <span class="kn">from</span> <span class="nn">...</span> <span class="kn">import</span> <span class="n">ir</span>
+<span class="kn">from</span> <span class="nn">...utils.assertions</span> <span class="kn">import</span> <span class="n">assert_dict_type</span><span class="p">,</span> <span class="n">assert_list_type</span><span class="p">,</span> <span class="n">assert_type</span>
+<span class="kn">from</span> <span class="nn">...utils.string</span> <span class="kn">import</span> <span class="n">ImplementsToLines</span><span class="p">,</span> <span class="n">Indent</span><span class="p">,</span> <span class="n">Lines</span>
 
 
 <div class="viewcode-block" id="AtPosedge">
