--- a/_modules/python2verilog/backend/verilog/codegen.html
+++ b/_modules/python2verilog/backend/verilog/codegen.html
@@ -34,13 +34,12 @@
 <span class="sd">&quot;&quot;&quot;</span>
 
 <span class="kn">import</span> <span class="nn">itertools</span>
-<span class="kn">import</span> <span class="nn">logging</span>
-<span class="kn">import</span> <span class="nn">warnings</span>
 
 <span class="kn">from</span> <span class="nn">python2verilog.optimizer.optimizer</span> <span class="kn">import</span> <span class="n">backwards_replace</span>
-<span class="kn">from</span> <span class="nn">.</span> <span class="kn">import</span> <span class="n">ast</span> <span class="k">as</span> <span class="n">ver</span>
+
 <span class="kn">from</span> <span class="nn">...</span> <span class="kn">import</span> <span class="n">ir</span>
-<span class="kn">from</span> <span class="nn">...utils.assertions</span> <span class="kn">import</span> <span class="n">assert_type</span><span class="p">,</span> <span class="n">assert_list_type</span><span class="p">,</span> <span class="n">assert_dict_type</span>
+<span class="kn">from</span> <span class="nn">...utils.assertions</span> <span class="kn">import</span> <span class="n">assert_dict_type</span><span class="p">,</span> <span class="n">assert_list_type</span><span class="p">,</span> <span class="n">assert_type</span>
+<span class="kn">from</span> <span class="nn">.</span> <span class="kn">import</span> <span class="n">ast</span> <span class="k">as</span> <span class="n">ver</span>
 
 
 <div class="viewcode-block" id="CodeGen">
