--- a/_modules/python2verilog/ir/statements.html
+++ b/_modules/python2verilog/ir/statements.html
@@ -34,14 +34,13 @@
 <span class="sd">&quot;&quot;&quot;</span>
 
 <span class="kn">from</span> <span class="nn">__future__</span> <span class="kn">import</span> <span class="n">annotations</span>
-<span class="kn">import</span> <span class="nn">warnings</span>
-<span class="kn">import</span> <span class="nn">inspect</span>
+
 <span class="kn">from</span> <span class="nn">typing</span> <span class="kn">import</span> <span class="n">Optional</span>
 
 <span class="kn">from</span> <span class="nn">python2verilog.ir.expressions</span> <span class="kn">import</span> <span class="n">Expression</span>
 
-<span class="kn">from</span> <span class="nn">..utils.string</span> <span class="kn">import</span> <span class="n">Lines</span><span class="p">,</span> <span class="n">ImplementsToLines</span>
 <span class="kn">from</span> <span class="nn">..utils.assertions</span> <span class="kn">import</span> <span class="n">assert_list_type</span>
+<span class="kn">from</span> <span class="nn">..utils.string</span> <span class="kn">import</span> <span class="n">ImplementsToLines</span><span class="p">,</span> <span class="n">Lines</span>
 
 
 <div class="viewcode-block" id="Statement">
