--- a/_modules/python2verilog/utils/assertions.html
+++ b/_modules/python2verilog/utils/assertions.html
@@ -32,7 +32,7 @@
 <span></span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">Type assertion utilities</span>
 <span class="sd">&quot;&quot;&quot;</span>
-<span class="kn">from</span> <span class="nn">typing</span> <span class="kn">import</span> <span class="n">Optional</span><span class="p">,</span> <span class="n">Any</span><span class="p">,</span> <span class="n">Union</span>
+<span class="kn">from</span> <span class="nn">typing</span> <span class="kn">import</span> <span class="n">Any</span><span class="p">,</span> <span class="n">Optional</span>
 
 
 <div class="viewcode-block" id="assert_list_type">
