--- a/_modules/python2verilog/ir/expressions.html
+++ b/_modules/python2verilog/ir/expressions.html
@@ -103,6 +103,18 @@
 
 
 
+<div class="viewcode-block" id="Unknown">
+<a class="viewcode-back" href="../../../python2verilog.ir.html#python2verilog.ir.context.Unknown">[docs]</a>
+<span class="k">class</span> <span class="nc">Unknown</span><span class="p">(</span><span class="n">Expression</span><span class="p">):</span>
+<span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
+<span class="sd">    Unknown or &quot;don&#39;t care&quot; value</span>
+<span class="sd">    &quot;&quot;&quot;</span>
+
+    <span class="k">def</span> <span class="fm">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
+        <span class="nb">super</span><span class="p">()</span><span class="o">.</span><span class="fm">__init__</span><span class="p">(</span><span class="s2">&quot;&#39;x&quot;</span><span class="p">)</span></div>
+
+
+
 <div class="viewcode-block" id="Var">
 <a class="viewcode-back" href="../../../python2verilog.ir.html#python2verilog.ir.context.Var">[docs]</a>
 <span class="k">class</span> <span class="nc">Var</span><span class="p">(</span><span class="n">Expression</span><span class="p">):</span>
