--- a/_modules/python2verilog/optimizer/optimizer.html
+++ b/_modules/python2verilog/optimizer/optimizer.html
@@ -114,7 +114,7 @@
 <div class="viewcode-block" id="graph_update_mapping">
 <a class="viewcode-back" href="../../../python2verilog.optimizer.html#python2verilog.optimizer.optimizer.graph_update_mapping">[docs]</a>
 <span class="k">def</span> <span class="nf">graph_update_mapping</span><span class="p">(</span>
-    <span class="n">stmt</span><span class="p">:</span> <span class="n">ir</span><span class="o">.</span><span class="n">Statement</span><span class="p">,</span> <span class="n">old_mapping</span><span class="p">:</span> <span class="nb">dict</span><span class="p">[</span><span class="n">ir</span><span class="o">.</span><span class="n">Expression</span><span class="p">,</span> <span class="n">ir</span><span class="o">.</span><span class="n">Expression</span><span class="p">]</span>
+    <span class="n">stmt</span><span class="p">:</span> <span class="n">ir</span><span class="o">.</span><span class="n">Element</span><span class="p">,</span> <span class="n">old_mapping</span><span class="p">:</span> <span class="nb">dict</span><span class="p">[</span><span class="n">ir</span><span class="o">.</span><span class="n">Expression</span><span class="p">,</span> <span class="n">ir</span><span class="o">.</span><span class="n">Expression</span><span class="p">]</span>
 <span class="p">):</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Updates mapping with statements&#39; contents</span>
