--- a/_modules/python2verilog/backend/verilog/codegen.html
+++ b/_modules/python2verilog/backend/verilog/codegen.html
@@ -285,9 +285,12 @@
         <span class="n">initial_body</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="n">ver</span><span class="o">.</span><span class="n">Statement</span><span class="p">())</span>
 
         <span class="k">for</span> <span class="n">i</span><span class="p">,</span> <span class="n">test_case</span> <span class="ow">in</span> <span class="nb">enumerate</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">context</span><span class="o">.</span><span class="n">test_cases</span><span class="p">):</span>
-            <span class="c1"># setup for new test case</span>
+            <span class="c1"># New test case and start</span>
             <span class="n">initial_body</span><span class="o">.</span><span class="n">append</span><span class="p">(</span>
-                <span class="n">ver</span><span class="o">.</span><span class="n">Statement</span><span class="p">(</span><span class="n">comment</span><span class="o">=</span><span class="sa">f</span><span class="s2">&quot;Test case </span><span class="si">{</span><span class="n">i</span><span class="si">}</span><span class="s2">: </span><span class="si">{</span><span class="nb">str</span><span class="p">(</span><span class="n">test_case</span><span class="p">)</span><span class="si">}</span><span class="s2">&quot;</span><span class="p">)</span>
+                <span class="n">ver</span><span class="o">.</span><span class="n">Statement</span><span class="p">(</span>
+                    <span class="n">comment</span><span class="o">=</span><span class="sa">f</span><span class="s2">&quot;============ Test Case </span><span class="si">{</span><span class="n">i</span><span class="si">}</span><span class="s2"> with &quot;</span>
+                    <span class="sa">f</span><span class="s2">&quot;arguments </span><span class="si">{</span><span class="nb">str</span><span class="p">(</span><span class="n">test_case</span><span class="p">)</span><span class="si">}</span><span class="s2"> ============&quot;</span>
+                <span class="p">)</span>
             <span class="p">)</span>
             <span class="k">for</span> <span class="n">i</span><span class="p">,</span> <span class="n">var</span> <span class="ow">in</span> <span class="nb">enumerate</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">context</span><span class="o">.</span><span class="n">input_vars</span><span class="p">):</span>
                 <span class="n">initial_body</span><span class="o">.</span><span class="n">append</span><span class="p">(</span>
@@ -299,13 +302,24 @@
                 <span class="n">ver</span><span class="o">.</span><span class="n">BlockingSubsitution</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">context</span><span class="o">.</span><span class="n">start_signal</span><span class="p">,</span> <span class="n">ir</span><span class="o">.</span><span class="n">UInt</span><span class="p">(</span><span class="mi">1</span><span class="p">))</span>
             <span class="p">)</span>
 
+            <span class="c1"># Post-start</span>
+            <span class="n">initial_body</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="n">ver</span><span class="o">.</span><span class="n">Statement</span><span class="p">())</span>
             <span class="n">initial_body</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="n">ver</span><span class="o">.</span><span class="n">AtNegedgeStatement</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">context</span><span class="o">.</span><span class="n">clock_signal</span><span class="p">))</span>
-
-            <span class="c1"># wait for done signal</span>
-            <span class="n">while_body</span><span class="p">:</span> <span class="nb">list</span><span class="p">[</span><span class="n">ver</span><span class="o">.</span><span class="n">Statement</span><span class="p">]</span> <span class="o">=</span> <span class="p">[]</span>
-            <span class="n">while_body</span><span class="o">.</span><span class="n">append</span><span class="p">(</span>
+            <span class="k">for</span> <span class="n">i</span><span class="p">,</span> <span class="n">var</span> <span class="ow">in</span> <span class="nb">enumerate</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">context</span><span class="o">.</span><span class="n">input_vars</span><span class="p">):</span>
+                <span class="n">initial_body</span><span class="o">.</span><span class="n">append</span><span class="p">(</span>
+                    <span class="n">ver</span><span class="o">.</span><span class="n">BlockingSubsitution</span><span class="p">(</span>
+                        <span class="n">ir</span><span class="o">.</span><span class="n">Expression</span><span class="p">(</span><span class="n">var</span><span class="o">.</span><span class="n">py_name</span><span class="p">),</span>
+                        <span class="n">ir</span><span class="o">.</span><span class="n">Unknown</span><span class="p">(),</span>
+                        <span class="n">comment</span><span class="o">=</span><span class="s2">&quot;only need inputs at start&quot;</span><span class="p">,</span>
+                    <span class="p">)</span>
+                <span class="p">)</span>
+            <span class="n">initial_body</span><span class="o">.</span><span class="n">append</span><span class="p">(</span>
                 <span class="n">ver</span><span class="o">.</span><span class="n">BlockingSubsitution</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">context</span><span class="o">.</span><span class="n">start_signal</span><span class="p">,</span> <span class="n">ir</span><span class="o">.</span><span class="n">UInt</span><span class="p">(</span><span class="mi">0</span><span class="p">))</span>
             <span class="p">)</span>
+            <span class="n">initial_body</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="n">ver</span><span class="o">.</span><span class="n">Statement</span><span class="p">())</span>
+
+            <span class="c1"># While loop waitng for ready signal</span>
+            <span class="n">while_body</span><span class="p">:</span> <span class="nb">list</span><span class="p">[</span><span class="n">ver</span><span class="o">.</span><span class="n">Statement</span><span class="p">]</span> <span class="o">=</span> <span class="p">[]</span>
             <span class="n">while_body</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="n">make_display_stmt</span><span class="p">())</span>
             <span class="n">while_body</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="n">ver</span><span class="o">.</span><span class="n">AtNegedgeStatement</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">context</span><span class="o">.</span><span class="n">clock_signal</span><span class="p">))</span>
 
