--- a/_modules/python2verilog/extern/iverilog.html
+++ b/_modules/python2verilog/extern/iverilog.html
@@ -47,7 +47,7 @@
 
 <span class="sd">    :param files: set of absolute paths to files required for simulation</span>
 <span class="sd">    &quot;&quot;&quot;</span>
-    <span class="n">cmd</span> <span class="o">=</span> <span class="sa">f</span><span class="s2">&quot;iverilog -s </span><span class="si">{</span><span class="n">top_level_module</span><span class="si">}</span><span class="s2"> &quot;</span>
+    <span class="n">cmd</span> <span class="o">=</span> <span class="sa">f</span><span class="s2">&quot;iverilog -g2005-sv -s </span><span class="si">{</span><span class="n">top_level_module</span><span class="si">}</span><span class="s2"> &quot;</span>
     <span class="n">cmd</span> <span class="o">+=</span> <span class="s2">&quot; &quot;</span><span class="o">.</span><span class="n">join</span><span class="p">(</span><span class="n">files</span><span class="p">)</span> <span class="o">+</span> <span class="s2">&quot; &quot;</span>
     <span class="c1"># pylint: disable=consider-using-with</span>
     <span class="n">cache_file</span> <span class="o">=</span> <span class="n">tempfile</span><span class="o">.</span><span class="n">NamedTemporaryFile</span><span class="p">(</span><span class="n">mode</span><span class="o">=</span><span class="s2">&quot;r&quot;</span><span class="p">,</span> <span class="n">encoding</span><span class="o">=</span><span class="s2">&quot;utf8&quot;</span><span class="p">)</span>
