--- a/genindex.html
+++ b/genindex.html
@@ -104,11 +104,7 @@
       <li><a href="python2verilog.ir.html#python2verilog.ir.expressions.BinOp">BinOp (class in python2verilog.ir.expressions)</a>
 </li>
       <li><a href="python2verilog.backend.verilog.html#python2verilog.backend.verilog.ast.BlockingSubsitution">BlockingSubsitution (class in python2verilog.backend.verilog.ast)</a>
-
-      <ul>
-        <li><a href="python2verilog.ir.html#python2verilog.ir.statements.BlockingSubsitution">(class in python2verilog.ir.statements)</a>
 </li>
-      </ul></li>
   </ul></td>
 </tr></table>
 
@@ -116,19 +112,11 @@
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="python2verilog.backend.verilog.html#python2verilog.backend.verilog.ast.Case">Case (class in python2verilog.backend.verilog.ast)</a>
-
-      <ul>
-        <li><a href="python2verilog.ir.html#python2verilog.ir.statements.Case">(class in python2verilog.ir.statements)</a>
 </li>
-      </ul></li>
       <li><a href="python2verilog.backend.verilog.html#python2verilog.backend.verilog.codegen.CaseBuilder">CaseBuilder (class in python2verilog.backend.verilog.codegen)</a>
 </li>
       <li><a href="python2verilog.backend.verilog.html#python2verilog.backend.verilog.ast.CaseItem">CaseItem (class in python2verilog.backend.verilog.ast)</a>
-
-      <ul>
-        <li><a href="python2verilog.ir.html#python2verilog.ir.statements.CaseItem">(class in python2verilog.ir.statements)</a>
 </li>
-      </ul></li>
       <li><a href="python2verilog.ir.html#python2verilog.ir.context.Context.check_input_types">check_input_types() (Context method)</a>
 </li>
       <li><a href="python2verilog.ir.html#python2verilog.ir.context.Context.check_output_types">check_output_types() (Context method)</a>
@@ -139,10 +127,10 @@
 </li>
       <li><a href="python2verilog.ir.html#python2verilog.ir.context.Context.clock_signal">clock_signal (Context attribute)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="python2verilog.ir.html#python2verilog.ir.graph.ClockedEdge">ClockedEdge (class in python2verilog.ir.graph)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="python2verilog.backend.verilog.html#python2verilog.backend.verilog.codegen.CodeGen">CodeGen (class in python2verilog.backend.verilog.codegen)</a>
 </li>
       <li><a href="python2verilog.utils.html#python2verilog.utils.string.Lines.concat">concat() (Lines method)</a>
@@ -168,11 +156,7 @@
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="python2verilog.backend.verilog.html#python2verilog.backend.verilog.ast.Declaration">Declaration (class in python2verilog.backend.verilog.ast)</a>
-
-      <ul>
-        <li><a href="python2verilog.ir.html#python2verilog.ir.statements.Declaration">(class in python2verilog.ir.statements)</a>
 </li>
-      </ul></li>
       <li><a href="python2verilog.utils.html#python2verilog.utils.decorator.decorator_with_args">decorator_with_args() (in module python2verilog.utils.decorator)</a>
 </li>
       <li><a href="python2verilog.ir.html#python2verilog.ir.context.Context.default_output_vars">default_output_vars() (Context method)</a>
@@ -367,8 +351,6 @@
 </li>
         <li><a href="python2verilog.ir.html#module-python2verilog.ir.graph">python2verilog.ir.graph</a>
 </li>
-        <li><a href="python2verilog.ir.html#module-python2verilog.ir.statements">python2verilog.ir.statements</a>
-</li>
         <li><a href="python2verilog.optimizer.html#module-python2verilog.optimizer">python2verilog.optimizer</a>
 </li>
         <li><a href="python2verilog.optimizer.html#module-python2verilog.optimizer.optimizer">python2verilog.optimizer.optimizer</a>
@@ -419,11 +401,7 @@
       <li><a href="python2verilog.api.html#python2verilog.api.decorators.new_namespace">new_namespace() (in module python2verilog.api.decorators)</a>
 </li>
       <li><a href="python2verilog.backend.verilog.html#python2verilog.backend.verilog.ast.NonBlockingSubsitution">NonBlockingSubsitution (class in python2verilog.backend.verilog.ast)</a>
-
-      <ul>
-        <li><a href="python2verilog.ir.html#python2verilog.ir.statements.NonBlockingSubsitution">(class in python2verilog.ir.statements)</a>
 </li>
-      </ul></li>
       <li><a href="python2verilog.ir.html#python2verilog.ir.graph.NonClockedEdge">NonClockedEdge (class in python2verilog.ir.graph)</a>
 </li>
   </ul></td>
@@ -579,13 +557,6 @@
 </li>
       </ul></li>
       <li>
-    python2verilog.ir.statements
-
-      <ul>
-        <li><a href="python2verilog.ir.html#module-python2verilog.ir.statements">module</a>
-</li>
-      </ul></li>
-      <li>
     python2verilog.optimizer
 
       <ul>
@@ -685,28 +656,18 @@
 </li>
       <li><a href="python2verilog.ir.html#python2verilog.ir.context.Context.state_var">state_var (Context attribute)</a>
 </li>
-      <li><a href="python2verilog.backend.verilog.html#python2verilog.backend.verilog.ast.Statement">Statement (class in python2verilog.backend.verilog.ast)</a>
-
-      <ul>
-        <li><a href="python2verilog.ir.html#python2verilog.ir.statements.Statement">(class in python2verilog.ir.statements)</a>
-</li>
-      </ul></li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="python2verilog.ir.html#python2verilog.ir.context.Context.states">states (Context property)</a>
+      <li><a href="python2verilog.backend.verilog.html#python2verilog.backend.verilog.ast.Statement">Statement (class in python2verilog.backend.verilog.ast)</a>
 </li>
-      <li><a href="python2verilog.ir.html#python2verilog.ir.statements.StateSubsitution">StateSubsitution (class in python2verilog.ir.statements)</a>
+      <li><a href="python2verilog.ir.html#python2verilog.ir.context.Context.states">states (Context property)</a>
 </li>
       <li><a href="python2verilog.ir.html#python2verilog.ir.graph.YieldNode.stmts">stmts (YieldNode property)</a>
 </li>
       <li><a href="python2verilog.ir.html#python2verilog.ir.expressions.Sub">Sub (class in python2verilog.ir.expressions)</a>
 </li>
       <li><a href="python2verilog.backend.verilog.html#python2verilog.backend.verilog.ast.Subsitution">Subsitution (class in python2verilog.backend.verilog.ast)</a>
-
-      <ul>
-        <li><a href="python2verilog.ir.html#python2verilog.ir.statements.Subsitution">(class in python2verilog.ir.statements)</a>
 </li>
-      </ul></li>
   </ul></td>
 </tr></table>
 
@@ -728,11 +689,11 @@
       <li><a href="python2verilog.backend.verilog.html#python2verilog.backend.verilog.ast.Always.to_lines">to_lines() (Always method)</a>
 
       <ul>
-        <li><a href="python2verilog.backend.verilog.html#python2verilog.backend.verilog.ast.Case.to_lines">(Case method)</a>, <a href="python2verilog.ir.html#python2verilog.ir.statements.Case.to_lines">[1]</a>
+        <li><a href="python2verilog.backend.verilog.html#python2verilog.backend.verilog.ast.Case.to_lines">(Case method)</a>
 </li>
-        <li><a href="python2verilog.backend.verilog.html#python2verilog.backend.verilog.ast.CaseItem.to_lines">(CaseItem method)</a>, <a href="python2verilog.ir.html#python2verilog.ir.statements.CaseItem.to_lines">[1]</a>
+        <li><a href="python2verilog.backend.verilog.html#python2verilog.backend.verilog.ast.CaseItem.to_lines">(CaseItem method)</a>
 </li>
-        <li><a href="python2verilog.backend.verilog.html#python2verilog.backend.verilog.ast.Declaration.to_lines">(Declaration method)</a>, <a href="python2verilog.ir.html#python2verilog.ir.statements.Declaration.to_lines">[1]</a>
+        <li><a href="python2verilog.backend.verilog.html#python2verilog.backend.verilog.ast.Declaration.to_lines">(Declaration method)</a>
 </li>
         <li><a href="python2verilog.backend.verilog.html#python2verilog.backend.verilog.ast.IfElse.to_lines">(IfElse method)</a>
 </li>
@@ -744,9 +705,9 @@
 </li>
         <li><a href="python2verilog.backend.verilog.html#python2verilog.backend.verilog.ast.Module.to_lines">(Module method)</a>
 </li>
-        <li><a href="python2verilog.backend.verilog.html#python2verilog.backend.verilog.ast.Statement.to_lines">(Statement method)</a>, <a href="python2verilog.ir.html#python2verilog.ir.statements.Statement.to_lines">[1]</a>
+        <li><a href="python2verilog.backend.verilog.html#python2verilog.backend.verilog.ast.Statement.to_lines">(Statement method)</a>
 </li>
-        <li><a href="python2verilog.backend.verilog.html#python2verilog.backend.verilog.ast.Subsitution.to_lines">(Subsitution method)</a>, <a href="python2verilog.ir.html#python2verilog.ir.statements.Subsitution.to_lines">[1]</a>
+        <li><a href="python2verilog.backend.verilog.html#python2verilog.backend.verilog.ast.Subsitution.to_lines">(Subsitution method)</a>
 </li>
         <li><a href="python2verilog.backend.verilog.html#python2verilog.backend.verilog.ast.While.to_lines">(While method)</a>
 </li>
@@ -791,13 +752,15 @@
 </li>
       <li><a href="python2verilog.ir.html#python2verilog.ir.expressions.UInt">UInt (class in python2verilog.ir.expressions)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="python2verilog.ir.html#python2verilog.ir.expressions.UnaryOp">UnaryOp (class in python2verilog.ir.expressions)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="python2verilog.optimizer.html#python2verilog.optimizer.optimizer.OptimizeGraph.unique_counter">unique_counter (OptimizeGraph attribute)</a>
 </li>
       <li><a href="python2verilog.ir.html#python2verilog.ir.graph.Element.unique_id">unique_id (Element property)</a>
+</li>
+      <li><a href="python2verilog.ir.html#python2verilog.ir.expressions.Unknown">Unknown (class in python2verilog.ir.expressions)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -808,8 +771,6 @@
       <li><a href="python2verilog.ir.html#python2verilog.ir.context.Context.valid_signal">valid_signal (Context attribute)</a>
 </li>
       <li><a href="python2verilog.ir.html#python2verilog.ir.context.Context.validate">validate() (Context method)</a>
-</li>
-      <li><a href="python2verilog.ir.html#python2verilog.ir.statements.ValidSubsitution">ValidSubsitution (class in python2verilog.ir.statements)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
